# server-sync

./: client.py  main.py  pyproject.toml  server.py
src/server_sync/: __init__.py
